--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ body{
   font-family: "Montserrat", sans-serif;
   margin:0;
   display:block;
+  overflow-x:hidden;
 }
 
 .toggle-theme-btn {
@@ -142,12 +143,12 @@ body{
   color:var(--color-title)
 }
 .title h2{
-  font-size: clamp(2rem, 16vw, 307.2px);
+  font-size: clamp(2rem, 10vw, 307.2px);
   text-transform: uppercase;
   margin:0;
   letter-spacing: 3px;
   line-height: 1;
-  margin-bottom: -3%;
+  margin-bottom: -2%;
 
 
 }
@@ -475,13 +476,14 @@ color: var(--color-info);
       
     }
     .title h2{
-      font-size: 22vw;
+      font-size: 18vw;
       
     }
     .title .left{
       text-align: left;
       width: 100%;
       display: block;
+      margin-left:15%;
       line-height: 0.5;
     }
     .title .right{
