--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,12 @@ color: var(--color-info);
   width:100%;
   gap: 40px;
   padding: 0rem 3.5rem 2rem 3.5rem;
+    cursor: grab;
+  user-select: none;
+}
+
+.carousel-track:active{
+  cursor: grabbing;
 }
 /* .carousel-track::before{
   content: "";
@@ -507,9 +513,7 @@ color: var(--color-info);
     justify-content: center;
     margin-left:0;
   }
-  .carousel-track{
 
-  }
 }
 
 @media (max-width: 400px) {
@@ -520,9 +524,7 @@ color: var(--color-info);
   min-width:280px;
   max-width: 280px;
 }
-.project-btn-wrapper{
-  
-}
+
 .project-btn-secondary{
   padding: 4px 10px;
   margin-left:-10px;
